fix(button): Make buttons 100% width on mobile

--- a/src/components/Button/Button.modules.scss
+++ b/src/components/Button/Button.modules.scss
@@ -20,6 +20,7 @@ $button-text-color: $color-white;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
 
   padding: 0 2rem;
 
@@ -34,6 +35,7 @@ $button-text-color: $color-white;
   .button {
     display: inline-flex;
 
+    width: auto;
     min-width: 180px;
   }
 
